--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.9'
+version: "3.9"
 
 services:
-
   punto_fijo:
     build: ./Microservices/PuntoFijo
     container_name: metodo_punto_fijo
@@ -10,7 +9,7 @@ services:
     volumes:
       - ./Microservices/PuntoFijo:/app
     restart: always
-    
+
   biseccion:
     build: ./Microservices/Biseccion
     container_name: metodo_biseccion
@@ -55,4 +54,3 @@ services:
     volumes:
       - ./Microservices/GaussSeidel:/app
     restart: always
-
